<resources>
    <string name="app_name">ParkingApp</string>

    <string name="preference_file_key">com.gbc.parkingapp.config</string>
    <string name="email_key">email_key</string>
    <string name="password_key">password_key</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign up</string>

    <string name="your_parking">Your Parking</string>
    <string name="no_parking">No Parking</string>
    <string name="add_parking">Add Parking</string>

    <string name="building_code">Building Code</string>
    <string name="parking_hours">Parking Hours</string>
    <string name="_1_hour_or_less">1 hour or less</string>
    <string name="_4_hours">4 hours</string>
    <string name="_12_hours">12 hours</string>
    <string name="_24_hours">24 hours</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="suit_number">Suit Number</string>

    <string name="address">Address</string>
    <string name="parking_location">Parking Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>